--- a/src/NoName/WebLayer/packages.config
+++ b/src/NoName/WebLayer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
+  <package id="bootstrap-dialog" version="3.3.4.1" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.4.0" targetFramework="net45" />
