--- a/src/NoName/WebLayer/HolyStream.Web.csproj
+++ b/src/NoName/WebLayer/HolyStream.Web.csproj
@@ -176,6 +176,7 @@
     </Compile>
     <Compile Include="Models\LogsViewModel.cs" />
     <Compile Include="Models\PlaylistModel.cs" />
+    <Compile Include="Models\SearchModel.cs" />
     <Compile Include="Models\SongViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -321,6 +322,8 @@
     <Content Include="Views\Song\SongsCount.cshtml" />
     <Content Include="Views\Song\Delete.cshtml" />
     <Content Include="Views\Song\DeletePartial.cshtml" />
+    <Content Include="Views\Shared\SearchPartial.cshtml" />
+    <Content Include="Views\Song\SearchSong.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Music\" />
