--- a/src/NoName/Factories/HolyStream.Factories.csproj
+++ b/src/NoName/Factories/HolyStream.Factories.csproj
@@ -69,6 +69,10 @@
       <Project>{067496d6-f8e1-4b57-b8df-89cb553a98c5}</Project>
       <Name>HolyStream.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Repository.Interfaces\HolyStream.Repository.Interfaces.csproj">
+      <Project>{f5bc01dd-6c95-46b0-b5e4-7ce93aa676bb}</Project>
+      <Name>HolyStream.Repository.Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Utils\HolyStream.Utils.csproj">
       <Project>{EF002C0F-BBB3-473D-ADCE-44A143C63C6D}</Project>
       <Name>HolyStream.Utils</Name>
