--- a/src/NoName/WebLayer/Web.config
+++ b/src/NoName/WebLayer/Web.config
@@ -28,6 +28,17 @@
 
       </requestFiltering>
     </security>
+    <rewrite>
+      <rules>
+        <rule name="http to https" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="^OFF$" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="SeeOther" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
